# oneping

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
oneping/: __init__.py  __main__.py  api.py  chat.py  chat_fasthtml.py  chat_textual.py  config.toml  curl.py  default.py  interface.py  native.py  providers.py  providers.toml  server.py  utils.py
oneping/chat/: chat.py  fasthtml.py  textual.py
oneping/interface/: fasthtml.py  prompt.py  textual.py
oneping/interface/web/: audio.js  curl.js  index.js
oneping/native/: __init__.py  anthropic.py  azure.py  fireworks.py  google.py  groq.py  openai.py  utils.py  xai.py
oneping/providers/: anthropic.py  fireworks.py  openai.py  xai.py
oneping/web/: audio.js
oneping/web/chat/: index.js
oneping/web/whisper/: index.css  index.html  index.js
scripts/: vision
testing/: jupiter_question.md
