[project]
name = 'oneping'
version = '0.2'
description = 'LLM provider abstraction layer.'
readme = { file = 'README.md' , content-type = 'text/markdown' }
authors = [{ name = 'Doug Hanley', email = 'doug@compendiumlabs.ai' }]
license = { text = 'MIT' }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ['llm', 'chat']
dependencies = []
requires-python = '>=3.7'

[project.optional-dependencies]
native = ['openai', 'anthropic', 'fireworks-ai', 'xai-sdk']
console = ['fire', 'textual']

[project.urls]
Homepage = 'http://github.com/CompendiumLabs/oneping'
