[project]
name = 'oneping'
version = '0.6.1'
description = 'LLM provider abstraction layer.'
readme = { file = 'README.md' , content-type = 'text/markdown' }
authors = [{ name = 'Doug Hanley', email = 'doug@compendiumlabs.ai' }]
license = 'MIT'
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ['llm', 'chat']
dependencies = ['aiohttp', 'fire']
requires-python = '>=3.7'

[project.scripts]
oneping = 'oneping.__main__:main'

[project.optional-dependencies]
native = ['openai', 'anthropic', 'google', 'xai']
chat = ['asyncstdlib', 'textual', 'python-fasthtml']

[project.urls]
Homepage = 'http://github.com/CompendiumLabs/oneping'

[tool.setuptools]
packages = ['oneping', 'oneping.native', 'oneping.interface']

[tool.setuptools.package-data]
"oneping" = ["providers.toml"]
"oneping.interface" = ["web/*"]
